// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The SelectedItems component list with items matches the snapshot with list has items 1`] = `
<SelectedItems
  items={
    Array [
      Object {
        "id": "rb",
        "name": "rainbow",
      },
      Object {
        "id": "rr",
        "name": "rarity",
      },
    ]
  }
  onDeselect={[MockFunction]}
  onReorder={[MockFunction]}
>
  <Subtitle>
    <div
      style={
        Object {
          "borderBottom": "1px solid #e8edf2",
          "height": "42px",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#212934",
            "fontFamily": "Roboto",
            "fontSize": "15px",
            "fontWeight": "500",
            "height": "20px",
            "left": "8px",
            "position": "relative",
            "top": "12px",
          }
        }
      >
        Selected Data
      </span>
    </div>
  </Subtitle>
  <DragDropContext
    onDragEnd={[Function]}
    onDragStart={[Function]}
  >
    <ErrorBoundary
      onError={[Function]}
    >
      <Connect(Droppable)
        direction="vertical"
        droppableId="selected-items-droppable"
        ignoreContainerClipping={false}
        isCombineEnabled={false}
        isDropDisabled={false}
        type="DEFAULT"
      >
        <Droppable
          direction="vertical"
          droppableId="selected-items-droppable"
          ignoreContainerClipping={false}
          isCombineEnabled={false}
          isDropDisabled={false}
          placeholder={null}
          shouldAnimatePlaceholder={true}
          snapshot={
            Object {
              "draggingFromThisWith": null,
              "draggingOverWith": null,
              "isDraggingOver": false,
            }
          }
          type="DEFAULT"
          updateViewportMaxScroll={[Function]}
        >
          <DroppableDimensionPublisher
            direction="vertical"
            droppableId="selected-items-droppable"
            getDroppableRef={[Function]}
            getPlaceholderRef={[Function]}
            ignoreContainerClipping={false}
            isCombineEnabled={false}
            isDropDisabled={false}
            type="DEFAULT"
          >
            <ItemsList
              data-react-beautiful-dnd-droppable="1"
              dataTest="undefined-list"
              innerRef={[Function]}
            >
              <ul
                data-test="undefined-list"
                style={
                  Object {
                    "flex": "1",
                    "listStyle": "none",
                    "margin": "0 6px",
                    "overflowY": "auto",
                    "paddingLeft": "0px",
                    "userSelect": "none",
                  }
                }
              >
                <Connect(Draggable)
                  disableInteractiveElementBlocking={false}
                  draggableId="rb"
                  index={0}
                  isDragDisabled={false}
                  key="rb"
                  shouldRespectForceTouch={true}
                >
                  <Draggable
                    disableInteractiveElementBlocking={false}
                    draggableId="rb"
                    drop={[Function]}
                    dropAnimationFinished={[Function]}
                    index={0}
                    isDragDisabled={false}
                    lift={[Function]}
                    mapped={
                      Object {
                        "combineTargetFor": null,
                        "offset": Object {
                          "x": 0,
                          "y": 0,
                        },
                        "shouldAnimateDisplacement": true,
                        "snapshot": Object {
                          "combineTargetFor": null,
                          "combineWith": null,
                          "draggingOver": null,
                          "dropAnimation": null,
                          "isDragging": false,
                          "isDropAnimating": false,
                          "mode": null,
                        },
                        "type": "SECONDARY",
                      }
                    }
                    move={[Function]}
                    moveByWindowScroll={[Function]}
                    moveDown={[Function]}
                    moveLeft={[Function]}
                    moveRight={[Function]}
                    moveUp={[Function]}
                    shouldRespectForceTouch={true}
                  >
                    <DraggableDimensionPublisher
                      draggableId="rb"
                      droppableId="selected-items-droppable"
                      getDraggableRef={[Function]}
                      index={0}
                      key="rb"
                      type="DEFAULT"
                    >
                      <DragHandle
                        callbacks={
                          Object {
                            "onCancel": [Function],
                            "onDrop": [Function],
                            "onLift": [Function],
                            "onMove": [Function],
                            "onMoveDown": [Function],
                            "onMoveLeft": [Function],
                            "onMoveRight": [Function],
                            "onMoveUp": [Function],
                            "onWindowScroll": [Function],
                          }
                        }
                        canDragInteractiveElements={false}
                        draggableId="rb"
                        getDraggableRef={[Function]}
                        getShouldRespectForceTouch={[Function]}
                        isDragging={false}
                        isDropAnimating={false}
                        isEnabled={true}
                      >
                        <li
                          aria-roledescription="Draggable item. Press space bar to lift"
                          className="selected-list-item"
                          data-react-beautiful-dnd-drag-handle="1"
                          data-react-beautiful-dnd-draggable="1"
                          data-test="undefined-list-item"
                          draggable={false}
                          id="rb"
                          onBlur={[Function]}
                          onDoubleClick={[Function]}
                          onDragStart={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onTouchStart={[Function]}
                          onTransitionEnd={null}
                          style={
                            Object {
                              "transform": null,
                              "transition": null,
                            }
                          }
                          tabIndex={0}
                        >
                          <Item
                            active={true}
                            ghost={false}
                            highlighted={false}
                            id="rb"
                            index={0}
                            name="rainbow"
                            onClick={[Function]}
                            onRemoveItem={[Function]}
                          >
                            <div
                              className="selected-period-item"
                              data-test="dimension-item-rb"
                              onClick={[Function]}
                              style={
                                Object {
                                  "alignItems": "center",
                                  "backgroundColor": "#b2dfdb",
                                  "borderRadius": "4px",
                                  "cursor": "pointer",
                                  "display": "flex",
                                  "padding": "3px",
                                }
                              }
                            >
                              <ItemIcon
                                backgroundColor="#00796b"
                              >
                                <div
                                  style={
                                    Object {
                                      "backgroundColor": "#00796b",
                                      "margin": "0 5px",
                                      "minHeight": "6px",
                                      "minWidth": "6px",
                                    }
                                  }
                                />
                              </ItemIcon>
                              <span
                                style={
                                  Object {
                                    "fontSize": "14px",
                                    "padding": "2px",
                                  }
                                }
                              >
                                rainbow
                              </span>
                              <DeselectIconButton
                                fill="#00796b"
                                onClick={[Function]}
                              >
                                <button
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "background": "none",
                                      "border": "none",
                                      "height": "18px",
                                      "outline": "none",
                                      "padding": "0px",
                                      "width": "18px",
                                    }
                                  }
                                >
                                  <span>
                                    <pure(CloseIcon)
                                      style={
                                        Object {
                                          "fill": "#00796b",
                                          "height": "13px",
                                          "width": "10px",
                                        }
                                      }
                                    >
                                      <CloseIcon
                                        style={
                                          Object {
                                            "fill": "#00796b",
                                            "height": "13px",
                                            "width": "10px",
                                          }
                                        }
                                      >
                                        <WithStyles(SvgIcon)
                                          style={
                                            Object {
                                              "fill": "#00796b",
                                              "height": "13px",
                                              "width": "10px",
                                            }
                                          }
                                        >
                                          <SvgIcon
                                            classes={
                                              Object {
                                                "colorAction": "MuiSvgIcon-colorAction-33",
                                                "colorDisabled": "MuiSvgIcon-colorDisabled-35",
                                                "colorError": "MuiSvgIcon-colorError-34",
                                                "colorPrimary": "MuiSvgIcon-colorPrimary-31",
                                                "colorSecondary": "MuiSvgIcon-colorSecondary-32",
                                                "fontSizeInherit": "MuiSvgIcon-fontSizeInherit-36",
                                                "fontSizeLarge": "MuiSvgIcon-fontSizeLarge-38",
                                                "fontSizeSmall": "MuiSvgIcon-fontSizeSmall-37",
                                                "root": "MuiSvgIcon-root-30",
                                              }
                                            }
                                            color="inherit"
                                            component="svg"
                                            fontSize="default"
                                            style={
                                              Object {
                                                "fill": "#00796b",
                                                "height": "13px",
                                                "width": "10px",
                                              }
                                            }
                                            viewBox="0 0 24 24"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              className="MuiSvgIcon-root-30"
                                              focusable="false"
                                              role="presentation"
                                              style={
                                                Object {
                                                  "fill": "#00796b",
                                                  "height": "13px",
                                                  "width": "10px",
                                                }
                                              }
                                              viewBox="0 0 24 24"
                                            >
                                              <path
                                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                              />
                                              <path
                                                d="M0 0h24v24H0z"
                                                fill="none"
                                              />
                                            </svg>
                                          </SvgIcon>
                                        </WithStyles(SvgIcon)>
                                      </CloseIcon>
                                    </pure(CloseIcon)>
                                  </span>
                                </button>
                              </DeselectIconButton>
                            </div>
                          </Item>
                        </li>
                      </DragHandle>
                    </DraggableDimensionPublisher>
                  </Draggable>
                </Connect(Draggable)>
                <Connect(Draggable)
                  disableInteractiveElementBlocking={false}
                  draggableId="rr"
                  index={1}
                  isDragDisabled={false}
                  key="rr"
                  shouldRespectForceTouch={true}
                >
                  <Draggable
                    disableInteractiveElementBlocking={false}
                    draggableId="rr"
                    drop={[Function]}
                    dropAnimationFinished={[Function]}
                    index={1}
                    isDragDisabled={false}
                    lift={[Function]}
                    mapped={
                      Object {
                        "combineTargetFor": null,
                        "offset": Object {
                          "x": 0,
                          "y": 0,
                        },
                        "shouldAnimateDisplacement": true,
                        "snapshot": Object {
                          "combineTargetFor": null,
                          "combineWith": null,
                          "draggingOver": null,
                          "dropAnimation": null,
                          "isDragging": false,
                          "isDropAnimating": false,
                          "mode": null,
                        },
                        "type": "SECONDARY",
                      }
                    }
                    move={[Function]}
                    moveByWindowScroll={[Function]}
                    moveDown={[Function]}
                    moveLeft={[Function]}
                    moveRight={[Function]}
                    moveUp={[Function]}
                    shouldRespectForceTouch={true}
                  >
                    <DraggableDimensionPublisher
                      draggableId="rr"
                      droppableId="selected-items-droppable"
                      getDraggableRef={[Function]}
                      index={1}
                      key="rr"
                      type="DEFAULT"
                    >
                      <DragHandle
                        callbacks={
                          Object {
                            "onCancel": [Function],
                            "onDrop": [Function],
                            "onLift": [Function],
                            "onMove": [Function],
                            "onMoveDown": [Function],
                            "onMoveLeft": [Function],
                            "onMoveRight": [Function],
                            "onMoveUp": [Function],
                            "onWindowScroll": [Function],
                          }
                        }
                        canDragInteractiveElements={false}
                        draggableId="rr"
                        getDraggableRef={[Function]}
                        getShouldRespectForceTouch={[Function]}
                        isDragging={false}
                        isDropAnimating={false}
                        isEnabled={true}
                      >
                        <li
                          aria-roledescription="Draggable item. Press space bar to lift"
                          className="selected-list-item"
                          data-react-beautiful-dnd-drag-handle="1"
                          data-react-beautiful-dnd-draggable="1"
                          data-test="undefined-list-item"
                          draggable={false}
                          id="rr"
                          onBlur={[Function]}
                          onDoubleClick={[Function]}
                          onDragStart={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onTouchStart={[Function]}
                          onTransitionEnd={null}
                          style={
                            Object {
                              "transform": null,
                              "transition": null,
                            }
                          }
                          tabIndex={0}
                        >
                          <Item
                            active={true}
                            ghost={false}
                            highlighted={false}
                            id="rr"
                            index={1}
                            name="rarity"
                            onClick={[Function]}
                            onRemoveItem={[Function]}
                          >
                            <div
                              className="selected-period-item"
                              data-test="dimension-item-rr"
                              onClick={[Function]}
                              style={
                                Object {
                                  "alignItems": "center",
                                  "backgroundColor": "#b2dfdb",
                                  "borderRadius": "4px",
                                  "cursor": "pointer",
                                  "display": "flex",
                                  "padding": "3px",
                                }
                              }
                            >
                              <ItemIcon
                                backgroundColor="#00796b"
                              >
                                <div
                                  style={
                                    Object {
                                      "backgroundColor": "#00796b",
                                      "margin": "0 5px",
                                      "minHeight": "6px",
                                      "minWidth": "6px",
                                    }
                                  }
                                />
                              </ItemIcon>
                              <span
                                style={
                                  Object {
                                    "fontSize": "14px",
                                    "padding": "2px",
                                  }
                                }
                              >
                                rarity
                              </span>
                              <DeselectIconButton
                                fill="#00796b"
                                onClick={[Function]}
                              >
                                <button
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "background": "none",
                                      "border": "none",
                                      "height": "18px",
                                      "outline": "none",
                                      "padding": "0px",
                                      "width": "18px",
                                    }
                                  }
                                >
                                  <span>
                                    <pure(CloseIcon)
                                      style={
                                        Object {
                                          "fill": "#00796b",
                                          "height": "13px",
                                          "width": "10px",
                                        }
                                      }
                                    >
                                      <CloseIcon
                                        style={
                                          Object {
                                            "fill": "#00796b",
                                            "height": "13px",
                                            "width": "10px",
                                          }
                                        }
                                      >
                                        <WithStyles(SvgIcon)
                                          style={
                                            Object {
                                              "fill": "#00796b",
                                              "height": "13px",
                                              "width": "10px",
                                            }
                                          }
                                        >
                                          <SvgIcon
                                            classes={
                                              Object {
                                                "colorAction": "MuiSvgIcon-colorAction-33",
                                                "colorDisabled": "MuiSvgIcon-colorDisabled-35",
                                                "colorError": "MuiSvgIcon-colorError-34",
                                                "colorPrimary": "MuiSvgIcon-colorPrimary-31",
                                                "colorSecondary": "MuiSvgIcon-colorSecondary-32",
                                                "fontSizeInherit": "MuiSvgIcon-fontSizeInherit-36",
                                                "fontSizeLarge": "MuiSvgIcon-fontSizeLarge-38",
                                                "fontSizeSmall": "MuiSvgIcon-fontSizeSmall-37",
                                                "root": "MuiSvgIcon-root-30",
                                              }
                                            }
                                            color="inherit"
                                            component="svg"
                                            fontSize="default"
                                            style={
                                              Object {
                                                "fill": "#00796b",
                                                "height": "13px",
                                                "width": "10px",
                                              }
                                            }
                                            viewBox="0 0 24 24"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              className="MuiSvgIcon-root-30"
                                              focusable="false"
                                              role="presentation"
                                              style={
                                                Object {
                                                  "fill": "#00796b",
                                                  "height": "13px",
                                                  "width": "10px",
                                                }
                                              }
                                              viewBox="0 0 24 24"
                                            >
                                              <path
                                                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                              />
                                              <path
                                                d="M0 0h24v24H0z"
                                                fill="none"
                                              />
                                            </svg>
                                          </SvgIcon>
                                        </WithStyles(SvgIcon)>
                                      </CloseIcon>
                                    </pure(CloseIcon)>
                                  </span>
                                </button>
                              </DeselectIconButton>
                            </div>
                          </Item>
                        </li>
                      </DragHandle>
                    </DraggableDimensionPublisher>
                  </Draggable>
                </Connect(Draggable)>
                <AnimateInOut
                  on={null}
                  shouldAnimate={true}
                />
              </ul>
            </ItemsList>
          </DroppableDimensionPublisher>
        </Droppable>
      </Connect(Droppable)>
    </ErrorBoundary>
  </DragDropContext>
  <div
    style={
      Object {
        "display": "block",
        "margin": "0 auto",
        "padding": "5px",
      }
    }
  >
    <WithStyles(Button)
      dataTest="undefined-deselect-all-button"
      onClick={[Function]}
    >
      <Button
        classes={
          Object {
            "colorInherit": "MuiButton-colorInherit-22",
            "contained": "MuiButton-contained-12",
            "containedPrimary": "MuiButton-containedPrimary-13",
            "containedSecondary": "MuiButton-containedSecondary-14",
            "disabled": "MuiButton-disabled-21",
            "extendedFab": "MuiButton-extendedFab-19",
            "fab": "MuiButton-fab-18",
            "flat": "MuiButton-flat-6",
            "flatPrimary": "MuiButton-flatPrimary-7",
            "flatSecondary": "MuiButton-flatSecondary-8",
            "focusVisible": "MuiButton-focusVisible-20",
            "fullWidth": "MuiButton-fullWidth-26",
            "label": "MuiButton-label-2",
            "mini": "MuiButton-mini-23",
            "outlined": "MuiButton-outlined-9",
            "outlinedPrimary": "MuiButton-outlinedPrimary-10",
            "outlinedSecondary": "MuiButton-outlinedSecondary-11",
            "raised": "MuiButton-raised-15",
            "raisedPrimary": "MuiButton-raisedPrimary-16",
            "raisedSecondary": "MuiButton-raisedSecondary-17",
            "root": "MuiButton-root-1",
            "sizeLarge": "MuiButton-sizeLarge-25",
            "sizeSmall": "MuiButton-sizeSmall-24",
            "text": "MuiButton-text-3",
            "textPrimary": "MuiButton-textPrimary-4",
            "textSecondary": "MuiButton-textSecondary-5",
          }
        }
        color="default"
        component="button"
        dataTest="undefined-deselect-all-button"
        disableFocusRipple={false}
        disabled={false}
        fullWidth={false}
        mini={false}
        onClick={[Function]}
        size="medium"
        type="button"
        variant="text"
      >
        <WithStyles(ButtonBase)
          className="MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6"
          component="button"
          dataTest="undefined-deselect-all-button"
          disabled={false}
          focusRipple={true}
          focusVisibleClassName="MuiButton-focusVisible-20"
          onClick={[Function]}
          type="button"
        >
          <ButtonBase
            centerRipple={false}
            className="MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6"
            classes={
              Object {
                "disabled": "MuiButtonBase-disabled-28",
                "focusVisible": "MuiButtonBase-focusVisible-29",
                "root": "MuiButtonBase-root-27",
              }
            }
            component="button"
            dataTest="undefined-deselect-all-button"
            disableRipple={false}
            disableTouchRipple={false}
            disabled={false}
            focusRipple={true}
            focusVisibleClassName="MuiButton-focusVisible-20"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            <button
              className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6"
              dataTest="undefined-deselect-all-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-2"
              >
                Deselect All
              </span>
              <NoSsr
                defer={false}
                fallback={null}
              >
                <WithStyles(TouchRipple)
                  center={false}
                  innerRef={[Function]}
                >
                  <TouchRipple
                    center={false}
                    classes={
                      Object {
                        "child": "MuiTouchRipple-child-43",
                        "childLeaving": "MuiTouchRipple-childLeaving-44",
                        "childPulsate": "MuiTouchRipple-childPulsate-45",
                        "ripple": "MuiTouchRipple-ripple-40",
                        "ripplePulsate": "MuiTouchRipple-ripplePulsate-42",
                        "rippleVisible": "MuiTouchRipple-rippleVisible-41",
                        "root": "MuiTouchRipple-root-39",
                      }
                    }
                  >
                    <TransitionGroup
                      childFactory={[Function]}
                      className="MuiTouchRipple-root-39"
                      component="span"
                      enter={true}
                      exit={true}
                    >
                      <span
                        className="MuiTouchRipple-root-39"
                      />
                    </TransitionGroup>
                  </TouchRipple>
                </WithStyles(TouchRipple)>
              </NoSsr>
            </button>
          </ButtonBase>
        </WithStyles(ButtonBase)>
      </Button>
    </WithStyles(Button)>
  </div>
  <div
    style={
      Object {
        "left": "-48px",
        "position": "absolute",
        "top": "291px",
      }
    }
  >
    <ArrowButton
      iconType="arrowBack"
      onClick={[Function]}
    >
      <button
        className="item-selector-arrow-button"
        onClick={[Function]}
        style={
          Object {
            "border": "1px solid #d5dde5",
            "borderRadius": "4px",
            "height": "36px",
            "minHeight": "36px",
            "minWidth": "40px",
            "padding": "0",
            "width": "40px",
          }
        }
      >
        <span
          style={
            Object {
              "fill": "#4a5768",
              "height": "20px",
              "width": "24px",
            }
          }
        >
          <pure(ArrowBackIcon)>
            <ArrowBackIcon>
              <WithStyles(SvgIcon)>
                <SvgIcon
                  classes={
                    Object {
                      "colorAction": "MuiSvgIcon-colorAction-33",
                      "colorDisabled": "MuiSvgIcon-colorDisabled-35",
                      "colorError": "MuiSvgIcon-colorError-34",
                      "colorPrimary": "MuiSvgIcon-colorPrimary-31",
                      "colorSecondary": "MuiSvgIcon-colorSecondary-32",
                      "fontSizeInherit": "MuiSvgIcon-fontSizeInherit-36",
                      "fontSizeLarge": "MuiSvgIcon-fontSizeLarge-38",
                      "fontSizeSmall": "MuiSvgIcon-fontSizeSmall-37",
                      "root": "MuiSvgIcon-root-30",
                    }
                  }
                  color="inherit"
                  component="svg"
                  fontSize="default"
                  viewBox="0 0 24 24"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-30"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                </SvgIcon>
              </WithStyles(SvgIcon)>
            </ArrowBackIcon>
          </pure(ArrowBackIcon)>
        </span>
      </button>
    </ArrowButton>
  </div>
</SelectedItems>
`;

exports[`The SelectedItems component matches the snapshot when list is empty 1`] = `
<SelectedItems
  items={Array []}
  onDeselect={[MockFunction]}
  onReorder={[MockFunction]}
>
  <Subtitle>
    <div
      style={
        Object {
          "borderBottom": "1px solid #e8edf2",
          "height": "42px",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#212934",
            "fontFamily": "Roboto",
            "fontSize": "15px",
            "fontWeight": "500",
            "height": "20px",
            "left": "8px",
            "position": "relative",
            "top": "12px",
          }
        }
      >
        Selected Data
      </span>
    </div>
  </Subtitle>
  <DragDropContext
    onDragEnd={[Function]}
    onDragStart={[Function]}
  >
    <ErrorBoundary
      onError={[Function]}
    >
      <Connect(Droppable)
        direction="vertical"
        droppableId="selected-items-droppable"
        ignoreContainerClipping={false}
        isCombineEnabled={false}
        isDropDisabled={false}
        type="DEFAULT"
      >
        <Droppable
          direction="vertical"
          droppableId="selected-items-droppable"
          ignoreContainerClipping={false}
          isCombineEnabled={false}
          isDropDisabled={false}
          placeholder={null}
          shouldAnimatePlaceholder={true}
          snapshot={
            Object {
              "draggingFromThisWith": null,
              "draggingOverWith": null,
              "isDraggingOver": false,
            }
          }
          type="DEFAULT"
          updateViewportMaxScroll={[Function]}
        >
          <DroppableDimensionPublisher
            direction="vertical"
            droppableId="selected-items-droppable"
            getDroppableRef={[Function]}
            getPlaceholderRef={[Function]}
            ignoreContainerClipping={false}
            isCombineEnabled={false}
            isDropDisabled={false}
            type="DEFAULT"
          >
            <ItemsList
              data-react-beautiful-dnd-droppable="0"
              dataTest="undefined-list"
              innerRef={[Function]}
            >
              <ul
                data-test="undefined-list"
                style={
                  Object {
                    "flex": "1",
                    "listStyle": "none",
                    "margin": "0 6px",
                    "overflowY": "auto",
                    "paddingLeft": "0px",
                    "userSelect": "none",
                  }
                }
              >
                <AnimateInOut
                  on={null}
                  shouldAnimate={true}
                />
              </ul>
            </ItemsList>
          </DroppableDimensionPublisher>
        </Droppable>
      </Connect(Droppable)>
    </ErrorBoundary>
  </DragDropContext>
  <div
    style={
      Object {
        "display": "block",
        "margin": "0 auto",
        "padding": "5px",
      }
    }
  >
    <WithStyles(Button)
      dataTest="undefined-deselect-all-button"
      onClick={[Function]}
    >
      <Button
        classes={
          Object {
            "colorInherit": "MuiButton-colorInherit-22",
            "contained": "MuiButton-contained-12",
            "containedPrimary": "MuiButton-containedPrimary-13",
            "containedSecondary": "MuiButton-containedSecondary-14",
            "disabled": "MuiButton-disabled-21",
            "extendedFab": "MuiButton-extendedFab-19",
            "fab": "MuiButton-fab-18",
            "flat": "MuiButton-flat-6",
            "flatPrimary": "MuiButton-flatPrimary-7",
            "flatSecondary": "MuiButton-flatSecondary-8",
            "focusVisible": "MuiButton-focusVisible-20",
            "fullWidth": "MuiButton-fullWidth-26",
            "label": "MuiButton-label-2",
            "mini": "MuiButton-mini-23",
            "outlined": "MuiButton-outlined-9",
            "outlinedPrimary": "MuiButton-outlinedPrimary-10",
            "outlinedSecondary": "MuiButton-outlinedSecondary-11",
            "raised": "MuiButton-raised-15",
            "raisedPrimary": "MuiButton-raisedPrimary-16",
            "raisedSecondary": "MuiButton-raisedSecondary-17",
            "root": "MuiButton-root-1",
            "sizeLarge": "MuiButton-sizeLarge-25",
            "sizeSmall": "MuiButton-sizeSmall-24",
            "text": "MuiButton-text-3",
            "textPrimary": "MuiButton-textPrimary-4",
            "textSecondary": "MuiButton-textSecondary-5",
          }
        }
        color="default"
        component="button"
        dataTest="undefined-deselect-all-button"
        disableFocusRipple={false}
        disabled={false}
        fullWidth={false}
        mini={false}
        onClick={[Function]}
        size="medium"
        type="button"
        variant="text"
      >
        <WithStyles(ButtonBase)
          className="MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6"
          component="button"
          dataTest="undefined-deselect-all-button"
          disabled={false}
          focusRipple={true}
          focusVisibleClassName="MuiButton-focusVisible-20"
          onClick={[Function]}
          type="button"
        >
          <ButtonBase
            centerRipple={false}
            className="MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6"
            classes={
              Object {
                "disabled": "MuiButtonBase-disabled-28",
                "focusVisible": "MuiButtonBase-focusVisible-29",
                "root": "MuiButtonBase-root-27",
              }
            }
            component="button"
            dataTest="undefined-deselect-all-button"
            disableRipple={false}
            disableTouchRipple={false}
            disabled={false}
            focusRipple={true}
            focusVisibleClassName="MuiButton-focusVisible-20"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            <button
              className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6"
              dataTest="undefined-deselect-all-button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-2"
              >
                Deselect All
              </span>
              <NoSsr
                defer={false}
                fallback={null}
              >
                <WithStyles(TouchRipple)
                  center={false}
                  innerRef={[Function]}
                >
                  <TouchRipple
                    center={false}
                    classes={
                      Object {
                        "child": "MuiTouchRipple-child-43",
                        "childLeaving": "MuiTouchRipple-childLeaving-44",
                        "childPulsate": "MuiTouchRipple-childPulsate-45",
                        "ripple": "MuiTouchRipple-ripple-40",
                        "ripplePulsate": "MuiTouchRipple-ripplePulsate-42",
                        "rippleVisible": "MuiTouchRipple-rippleVisible-41",
                        "root": "MuiTouchRipple-root-39",
                      }
                    }
                  >
                    <TransitionGroup
                      childFactory={[Function]}
                      className="MuiTouchRipple-root-39"
                      component="span"
                      enter={true}
                      exit={true}
                    >
                      <span
                        className="MuiTouchRipple-root-39"
                      />
                    </TransitionGroup>
                  </TouchRipple>
                </WithStyles(TouchRipple)>
              </NoSsr>
            </button>
          </ButtonBase>
        </WithStyles(ButtonBase)>
      </Button>
    </WithStyles(Button)>
  </div>
  <div
    style={
      Object {
        "left": "-48px",
        "position": "absolute",
        "top": "291px",
      }
    }
  >
    <ArrowButton
      iconType="arrowBack"
      onClick={[Function]}
    >
      <button
        className="item-selector-arrow-button"
        onClick={[Function]}
        style={
          Object {
            "border": "1px solid #d5dde5",
            "borderRadius": "4px",
            "height": "36px",
            "minHeight": "36px",
            "minWidth": "40px",
            "padding": "0",
            "width": "40px",
          }
        }
      >
        <span
          style={
            Object {
              "fill": "#4a5768",
              "height": "20px",
              "width": "24px",
            }
          }
        >
          <pure(ArrowBackIcon)>
            <ArrowBackIcon>
              <WithStyles(SvgIcon)>
                <SvgIcon
                  classes={
                    Object {
                      "colorAction": "MuiSvgIcon-colorAction-33",
                      "colorDisabled": "MuiSvgIcon-colorDisabled-35",
                      "colorError": "MuiSvgIcon-colorError-34",
                      "colorPrimary": "MuiSvgIcon-colorPrimary-31",
                      "colorSecondary": "MuiSvgIcon-colorSecondary-32",
                      "fontSizeInherit": "MuiSvgIcon-fontSizeInherit-36",
                      "fontSizeLarge": "MuiSvgIcon-fontSizeLarge-38",
                      "fontSizeSmall": "MuiSvgIcon-fontSizeSmall-37",
                      "root": "MuiSvgIcon-root-30",
                    }
                  }
                  color="inherit"
                  component="svg"
                  fontSize="default"
                  viewBox="0 0 24 24"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-30"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                </SvgIcon>
              </WithStyles(SvgIcon)>
            </ArrowBackIcon>
          </pure(ArrowBackIcon)>
        </span>
      </button>
    </ArrowButton>
  </div>
</SelectedItems>
`;
